--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "jest",
+    "test": "node ./node_modules/jest/bin/jest.js",
     "lint": "eslint --fix ./**/*.js"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
     "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -33,13 +34,17 @@
     "eslint-plugin-react-native": "^3.6.0",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.0.0",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "react-dom": "^16.7.0"
   },
   "private": true,
   "jest": {
     "preset": "jest-expo",
     "testMatch": [
-      "./tests/**/*.js"
+      "**/tests/**/*.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTest.js"
     ]
   }
 }
