--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "eject": "expo eject",
     "test": "node ./node_modules/jest/bin/jest.js",
-    "lint": "eslint --fix ./**/*.js"
+    "lint": "eslint ./**/*.js"
   },
   "dependencies": {
     "expo": "^32.0.0",
