--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-floating-action": "^1.13.0",
+    "react-native-modal": "^7.0.2",
     "react-native-popup-menu": "^0.14.2",
     "react-navigation": "^3.0.9",
     "realm": "^2.22.0"
